<resources>
    <string name="nc_create_signer_title">Add air-gapped key</string>
    <string name="nc_add_an_airgapped_key">Add an air-gapped key</string>
    <string name="nc_add_signer_title">Add key</string>
    <string name="nc_text_signer_info">Key Info</string>
    <string name="nc_error_invalid_signer_spec">Invalid Signer Spec</string>
    <string name="nc_error_signer_existed">Signer Existed</string>
    <string name="nc_text_add_signer_success">%s has been added</string>
    <string name="nc_text_set_passphrase_success">Passphrase has been set</string>
    <string name="nc_text_change_signer_success">Key name has been updated</string>
    <string name="nc_text_change_signer_error">The signer name hasn\'t been updated</string>
    <string name="nc_title_signer_info">Signer Info</string>
    <string name="nc_remove_signer">Remove key</string>
    <string name="nc_signer_air_gapped">Air-gapped</string>
    <string name="nc_signer_airgapped">Airgapped</string>
    <string name="nc_create_signer_description">You can add NFC, air-gapped and software keys via this mobile app. If you need to add a wired key, please do so via the Nunchuk desktop app.</string>
    <string name="nc_scan_static_qr">Scan static QR</string>
    <string name="nc_scan_dynamic_qr">Scan dynamic QR</string>
    <string name="nc_text_signer_name">Key name</string>
    <string name="nc_text_signer_spec">Key spec</string>
    <string name="nc_text_signer_spec_placeholder" translatable="false">[deadbeef/84h/0h/0h]xpub</string>
    <string name="nc_text_add_signer">Add key</string>
    <string name="nc_signer_bad_ratio_not_recommend">It is not recommended for the software keys to have complete control of the wallet. Software keys are not as safe as hardware keys. Are you sure you want to proceed?</string>
    <string name="nc_signer_bad_ratio_recommend">It is recommended for the hardware keys to have complete control of the wallet. Software keys are not as safe as hardware keys. Are you sure you want to proceed?</string>
    <string name="nc_signer_select_key_dialog_title">We found these keys from the device.\nWhich key do you want to use?</string>
    <string name="nc_txt_run_health_check">Run health check</string>
    <string name="nc_txt_health_check">Health check</string>
    <string name="nc_txt_run_health_check_success_event">%s is healthy</string>
    <string name="nc_txt_run_health_check_error_event">%s is not healthy</string>
    <string name="nc_add_nfc_key">Add NFC key</string>
    <string name="nc_existing_cvc">Starting PIN</string>
    <string name="nc_existing_pin">Existing PIN</string>
    <string name="nc_set_up_nfc_key">Set up NFC key</string>
    <string name="nc_set_up_cvc">Set up PIN</string>
    <string name="nc_new_cvc">New PIN</string>
    <string name="nc_confirm_new_cvc">Confirm new PIN</string>
    <string name="nc_keep_your_cvc_hint">The PIN code is a security feature that prevents unauthorized access to your key. Please keep it safe. You\'ll need it for signing transactions.</string>
    <string name="nc_cvc_not_match">New PIN does not match</string>
    <string name="nc_cvc_incorrect">PIN is inccorect</string>
    <string name="nc_setup_nfc_key_desc">This NFC key has not been initialized. Do you want to initialize it now?</string>
    <string name="nc_name_your_key">Name your key</string>
    <string name="nc_nfc_key_already_added">This key has already been added.</string>
    <string name="nc_top_up_xpubs">Top up XPUBs</string>
    <string name="nc_change_cvc">Change PIN</string>
    <string name="nc_back_up_key">Back up key</string>
    <string name="nc_remove_key">Remove key</string>
    <string name="nc_cvc_has_been_changed">PIN has been changed</string>
    <string name="nc_master_private_key_init">Master private key has been initialized</string>
    <string name="nc_config_cvc_failed">Config cvc failed</string>
    <string name="nc_info">Info</string>
    <string name="nc_set_up_chain_code">Set up chain code</string>
    <string name="nc_chain_code_desc">The chain code is a 32-byte of entropy, used for the key picking process. If you are unsure, we recommend that you leave it on automatic.</string>
    <string name="nc_automatic">Automatic</string>
    <string name="nc_advanced">Advanced</string>
    <string name="nc_pick_my_chain_code">I’ll pick my chain code</string>
    <string name="nc_app_generate_chain_code">Let the app generate the chain code</string>
    <string name="nc_enter_32_byte_hex_string">Enter a random 32-byte hex string</string>
    <string name="nc_generate_new_string">Generate new string</string>
    <string name="nc_invalid_chain_code">Invalid chain code, it should contains 64 characters from 0 to 9 and a to f</string>
    <string name="nc_set_up_nfc_hint">We’ll scan your NFC key again to activate it. This could take a few seconds.\n\nWe’ll give you an encrypted backup file for the key once this process is done.</string>
    <string name="nc_recovery_key_info_desc">The encrypted backup file you just saved is required if you want to recover the NFC key later.\n\nYou’ll also need the backup password printed on the back of the card.</string>
    <string name="nc_nfc_key_recovery_info_title">NFC key recovery information</string>
    <string name="nc_confirm_change_cvc">Confirm change PIN</string>
    <string name="nc_xpub_topped_up">XPUBs have been topped up</string>
    <string name="nc_card_id">Card ID</string>
    <string name="nc_confirmation">Confirmation</string>
    <string name="nc_delete_key_msg">Are you sure you want to remove this key?</string>
    <string name="nc_delete_key">Delete key</string>
    <string name="nc_key_has_been_deleted">%1$s has been deleted</string>
    <string name="nc_recover_nfc_key">Recover NFC key</string>
    <string name="nc_convert_backup_key_msg">Note that we will convert the NFC key backup into a software key. On the next screens, you will:</string>
    <string name="nc_select_the_encrypted_backup">Select the encrypted backup file</string>
    <string name="nc_enter_descryption_key_msg">Enter the Backup Password. You can find it on the back of the card (It might be listed under “Backup key”).</string>
    <string name="nc_add_new_nfc_key">Add TAPSIGNER</string>
    <string name="nc_recover_nfc_key_from_backup">Recover TAPSIGNER key from backup</string>
    <string name="nc_enter_decryption_key">Enter backup password</string>
    <string name="nc_backup_password">Backup Password</string>
    <string name="nc_warning_key_use_in_wallet">This key is currently being used in a wallet. Are you sure you want to delete it?</string>
    <string name="nc_warning_key_use_in_hot_wallet">Your hot wallet has not been backed up yet. Deleting this key means losing access to your hot wallet forever. Are you sure you want to delete this key?</string>
    <string name="nc_warning_key_use_in_assisted_wallet">This key is currently being used in a wallet. Please remove the wallet first.</string>
    <string name="nc_please_remove_on_added_device">Please remove this key on the device that it was added to.</string>
    <string name="nc_backup_key_failed">Backup key failed</string>
    <string name="nc_topup_xpub_failed">Topup Xpub failed</string>
    <string name="nc_not_now">Not now</string>
    <string name="nc_detect_unseal_slots_has_balance">We detect that there is %1$s in unsealed slots %2$s. Unsealed slots are unsafe. Would you like to sweep it?</string>
    <string name="nc_detect_unseal_slot_has_balance">We detect that there is %1$s in unsealed slot %2$s. Unsealed slots are unsafe. Would you like to sweep it?</string>
    <string name="nc_select_wallet_first">Select wallet first</string>
    <string name="nc_please_wait_balance_confirmation">Please wait balance confirmation</string>
    <string name="nc_mk4_init_device_key_desc">Follow the vendor’s instruction on how to set up your device with a seed phrase.</string>
    <string name="nc_unlock_device_desc">You might need to enter a PIN and/or a PASSPHRASE directly on COLDCARD.</string>
    <string name="nc_mk4_tooltip">For COLDCARD devices, please refer to</string>
    <string name="nc_this_starter_guide">this starter guide</string>
    <string name="nc_mk4_signer_title">We found these keys from the device.\nWhich key do you want to use?</string>
    <string name="nc_enable_mk4_nfc_desc">Go to Settings → Hardware On/Off → NFC Sharing → Enable NFC.</string>
    <string name="nc_back_up_tap_signer_hint">We highly recommend that you keep a second copy of the Backup Password and store it somewhere safe.</string>
    <string name="nc_verify_backup_hint">If you verify the backup via the app, please make sure that this device has not been jailbroken or tampered with.</string>
    <string name="nc_estimate_remain_time">Est. time remaining: %1$d minutes</string>
    <string name="nc_verify_back_up_desc">We recommend that you verify the backup to ensure that it works.\n\nPlease select how you want to proceed.</string>
    <string name="nc_verify_backup_via_the_app">I’ll verify the backup via the app</string>
    <string name="nc_verify_backup_myself">I’ll verify the backup myself</string>
    <string name="nc_verify_backup_via_the_app_title">Verify backup via the app</string>
    <string name="nc_verify_back_up_failed_too_much_desc">It looks like your Backup Password is invalid or the backup file has been corrupted. What would you like to do?</string>
    <string name="nc_reupload_backup_file">Reupload backup file</string>
    <string name="nc_verify_backup_yourself_desc">Please follow the steps below to verify the backup yourself</string>
    <string name="nc_verify_backup_yourself_step_one">Download the encrypted backup file.</string>
    <string name="nc_verify_backup_yourself_step_two">Use a decryption tool such as openssl to check if you can decrypt the file using the provided password.</string>
    <string name="nc_verify_backup_yourself_step_three">Remove the backup file after you are done.</string>
    <string name="nc_existing_card_id">Existing card ID</string>
    <string name="nc_scan_your_card_again_desc">If you have more than one TAPSIGNERs, please make sure that you scan the correct one. You can find the card ID on the back of the card.</string>
    <string name="nc_scan_your_card_title">Please scan your card again</string>
    <string name="nc_tap_signer_already_existed">TAPSIGNER already existed</string>
    <string name="nc_tap_signer_existed_desc">It looks like you have already added this TAPSIGNER. Are you sure you want to use it in the wallet?</string>
    <string name="nc_yes_use_this_tapsigner">Yes, use this TAPSIGNER</string>
    <string name="nc_no_add_a_new_one">No, I want to add a new one</string>
    <string name="nc_add_your_coldcard">Add your COLDCARD</string>
    <string name="nc_export_xpub_coldcard_desc">Navigate to Advanced/Tools → Export Wallet → Generic JSON → Select 1 to Enter Account → Enter Account # (0 if first time) → OK.</string>
    <string name="nc_export_xpub_coldcard_scan_qr_code_desc">Advanced/Tools → Export Wallet → Generic JSON → Select 1 to Enter Account → Enter Account # (0 if first time) → Enter → QR</string>
    <string name="nc_export_xpub_coldcard_onchain_scan_qr_code_desc">Navigate to Advanced/Tools → Export Wallet → Generic JSON → Select 1 to Enter Account → [B]Enter Account %1$d[/B] → Enter → QR</string>
    <string name="nc_export_xpub_coldcard_onchain_file_desc">Navigate to Advanced/Tools → Export Wallet → Generic JSON → Select 1 to Enter Account → [B]Enter Account %1$d[/B] → OK.</string>
    <string name="nc_import_xpub_into_app_desc">Next, import the file from step 3.</string>
    <string name="nc_scan_qr_code_desc">Tap Continue to scan the QR code on the next screen.</string>
    <string name="nc_self_verify_hint">For details on how to use openssl for verification, visit</string>
    <string name="nc_view_claiming_instructions">View claiming instructions</string>
</resources>