<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/NCToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:navigationIcon="@drawable/ic_back">

        <com.nunchuk.android.widget.NCFontTextView
            android:id="@+id/toolbarTitle"
            style="@style/NCToolbar.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nc_recover_nfc_key" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/introImg"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/nc_padding_24"
        android:background="@drawable/nc_circle_whisper_background"
        android:padding="@dimen/nc_padding_16"
        android:src="@drawable/ic_smart_recovery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.nunchuk.android.widget.NCFontTextView
        android:id="@+id/title"
        style="@style/NCText.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_16"
        android:text="@string/nc_convert_backup_key_msg"
        app:fontTextStyle="semi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introImg" />

    <com.nunchuk.android.widget.NCLabelWithNumber
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_24"
        app:pos="1"
        app:text="@string/nc_select_the_encrypted_backup" />

    <com.nunchuk.android.widget.NCLabelWithNumber
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/nc_padding_16"
        android:layout_marginTop="@dimen/nc_padding_24"
        app:pos="2"
        app:text="@string/nc_enter_descryption_key_msg" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.nunchuk.android.widget.NCFontButton
        android:id="@+id/btn_continue"
        style="@style/NCPrimaryButton.Dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/nc_padding_16"
        android:text="@string/nc_text_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>