<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/nc_padding_16">

    <com.nunchuk.android.widget.NCEditTextView
        android:id="@+id/signerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nc_padding_24"
        app:edit_title="@string/nc_text_signer_name"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.nunchuk.android.widget.NCEditTextView
        android:id="@+id/signerSpec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nc_padding_24"
        app:edit_title="@string/nc_text_signer_spec"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signerName" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/addSignerViaQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nc_padding_16"
        android:paddingVertical="@dimen/nc_padding_4"
        android:background="@drawable/nc_rounded_light_background"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signerSpec">

        <com.nunchuk.android.widget.NCFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_qr"
            android:paddingVertical="@dimen/nc_padding_8"
            android:drawablePadding="@dimen/nc_padding_8"
            android:gravity="center"
            android:text="@string/nc_add_signer_via_qr_code"
            android:textColor="@color/nc_black_color"
            android:textSize="@dimen/nc_text_size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signerSpec" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.nunchuk.android.widget.NCFontButton
        android:id="@+id/addSigner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nc_padding_16"
        android:background="@drawable/nc_rounded_dark_background"
        android:gravity="center"
        android:padding="@dimen/nc_padding_16"
        android:text="@string/nc_text_add_signer"
        android:textAllCaps="false"
        android:textColor="@color/nc_white_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>